src/test/ui/suggestions/issue-84973.stderr
error[E0277]: the trait bound `Fancy: SomeTrait` is not satisfied
  --> $DIR/issue-84973.rs:6:24
   |
LL |     let o = Other::new(f);
   |                        ^
   |                        |
   |                        expected an implementor of trait `SomeTrait`
   |                        help: consider borrowing here: `&f`
...
LL |     pub fn new(g: G) -> Self {
   |     ------------------------ required by `Other::<'a, G>::new`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
